[package]
name = "eventsource2graphite"
version = "0.1.0"
edition = "2021"

[dependencies]
eventsource-client = "0.15.1"
tokio = { version = "1", features = ["full"] }
futures-util = "0.3"
env_logger = "0.11"
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
graphyne = "0.2.2"
clap = { version = "4.5.4", features = ["derive"] }
